String.fromCharcode(ascii)

--- a/public/material.html
+++ b/public/material.html
@@ -34,11 +34,25 @@
         </div>
 
     <form   id="mat-form" >
-      
+
+      <div class="row">
+        <div class="col">
+          <input type="text" class="form-control" placeholder="First name">
+        </div>
+        <div class="col">
+          <input type="text" class="form-control" placeholder="Last name">
+        </div>
+      </div>
         <div class="col-md-4 mb-3">
+
+        
+
+
+
           <div class="form-row">
           <label for="matkx">Description</label>
           <input type="text" name="matkx" class="form-control" id="matkx"  placeholder="Product Description">
+          <input type="color" name="matkx-color" id="matkx-color">
         </div>
         <div class="form-row">
           <label for="mbrsh">Industry</label>
