--- a/public/material.html
+++ b/public/material.html
@@ -35,42 +35,67 @@
 
     <form   id="mat-form" >
 
-      <div class="row">
-        <div class="col">
-          <input type="text" class="form-control" placeholder="First name">
-        </div>
-        <div class="col">
-          <input type="text" class="form-control" placeholder="Last name">
-        </div>
+      <div class="form-row">
+            <div class="form-group col-md-2">
+              <label for="matkx">Description</label>
+            </div>
+            <div class="form-group col-md-6">
+              <input type="text" name="matkx" class="form-control" id="matkx"  placeholder="Product Description"> 
+            </div>
+            <div class="form-group col-md-4">
+              <input name="matkx_user"  type="text" class="form-control" disabled="true" placeholder="user:">
+            </div>    
       </div>
-        <div class="col-md-4 mb-3">
 
-        
+      <div class="form-row">
+            <div class="form-group col-md-2">
+              <label for="mbrsh">Industry</label>
+            </div>
+            <div class="form-group col-md-6">
+              <input type="text"  name="mbrsh"  class="form-control" id="mbrsh"  placeholder="Industry">
+            </div>
+            <div class="form-group col-md-4">
+              <input name="mbrsh_user"  type="text" class="form-control" disabled="true" placeholder="user:">
+            </div>
+      </div>
 
+      <div class="form-row">
+            <div class="form-group col-md-2">
+              <label for="matkl">Material Group</label>
+            </div>
+            <div class="form-group col-md-6">
+              <input type="text" name="matkl" class="form-control" id="matkl"  placeholder="Material Group">
+            </div>
+            <div class="form-group col-md-4">
+              <input name="matkl_user"  type="text" class="form-control" disabled="true" placeholder="user:">
+            </div>
+      </div>
 
-
-          <div class="form-row">
-          <label for="matkx">Description</label>
-          <input type="text" name="matkx" class="form-control" id="matkx"  placeholder="Product Description">
-          <input type="color" name="matkx-color" id="matkx-color">
-        </div>
-        <div class="form-row">
-          <label for="mbrsh">Industry</label>
-          <input type="text"  name="mbrsh"  class="form-control" id="mbrsh"  placeholder="Industry">
-        </div>
-        <div class="form-row">
-          <label for="matkl">Material Group</label>
-          <input type="text" name="matkl" class="form-control" id="matkl"  placeholder="Material Group">
-        </div>
-        <div class="form-row">
+      <div class="form-row">
+        <div class="form-group col-md-2">
           <label for="matyp">Material Type</label>
+        </div>
+        <div class="form-group col-md-6">
           <input type="text"  name="matyp"  class="form-control" id="matyp"  placeholder="Material Type">
         </div>
-        <div class="form-row">
+        <div class="form-group col-md-4">
+          <input name="matyp_user"  type="text" class="form-control" disabled="true" placeholder="user:">
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="form-group col-md-2">
           <label for="meins">Base Unit of Measure</label>
+        </div>
+        <div class="form-group col-md-6">
           <input type="text" name="meins" class="form-control" id="meins"  placeholder="Base Unit of Measure">
         </div>
-        <button type="submit" <i class="fas fa-paper-plane btn btn-primary"></i>Emit</button>
+        <div class="form-group col-md-4">
+          <input name="meins_user"  type="text" class="form-control" disabled="true" placeholder="user:">
+        </div>
+      </div>
+
+      <button type="submit" <i class="fas fa-paper-plane btn btn-primary"></i>Emit</button>
         </form>
       <script
       src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
