color and user typing yet to be finished

--- a/public/material.html
+++ b/public/material.html
@@ -43,7 +43,7 @@
               <input type="text" name="matkx" class="form-control" id="matkx"  placeholder="Product Description"> 
             </div>
             <div class="form-group col-md-4">
-              <input name="matkx_user"  type="text" class="form-control" disabled="true" placeholder="user:">
+              <input name="matkx_user"  type="text" class="form-control"  placeholder="user:">
             </div>    
       </div>
 
