post would work after ejs adjustment

--- a/public/material.html
+++ b/public/material.html
@@ -132,6 +132,8 @@
       
 
         </form>
+          <button type="submit">Send2S4</button>
+        <form action="/s4" method="post"></form>
 
       <script
       src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
