--- a/public/material.html
+++ b/public/material.html
@@ -34,7 +34,7 @@
           <h4><i class="fas fa-user"></i> This user</h4>
           <p id="username"><p>
         </div>
-
+      
     <form   id="mat-form" >
 
       <div class="form-row">
@@ -55,6 +55,7 @@
             </div>
             <div class="form-group col-md-6">
               <select     name="mbrsh" id="mbrsh">
+                <option value="#">Select...</option>
                 <option value="M">Mechanical</option>
                 <option value="R">Retail</option>
                 <option value="P">Pharma</option>
@@ -73,6 +74,7 @@
             </div>
             <div class="form-group col-md-6">
               <select     name="matkl" id="matkl">
+                <option value="#">Select...</option>
                 <option value="0010">0010-Disk Memory</option>
                 <option value="0020">0020-Motherboard</option>
                 <option value="0030">0030-Processor</option>
@@ -90,6 +92,7 @@
         </div>
         <div class="form-group col-md-6">
           <select     name="matyp" id="matyp">
+            <option value="#">Select...</option>
             <option value="FERT">FERT-Finished Goods</option>
             <option value="HALB">HALB-Semi Finished Goods</option>
             <option value="ROH">ROH-Raw Materials</option>
@@ -107,6 +110,7 @@
         </div>
         <div class="form-group col-md-6">
           <select   name="meins" id="meins">
+            <option value="#">Select...</option>
             <option value="EA">EA- Each</option>
             <option value="CS">CS-Case</option>
             <option value="KG">KG-KiloGram</option>
